--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/php:7.4-node-browsers
+      - image: cimg/php:7.3-node
     steps:
       - checkout
       - run: composer install -n --prefer-dist
