--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,10 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/php:7.3-node
+      - image: circleci/php:7.3-node-browsers
     steps:
       - checkout
+      - run: sudo composer self-update --1
       - run: composer install -n --prefer-dist
       - run: npm ci
       - run: npm run dev
