--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,17 @@ jobs:
           - APP_DEBUG: true
           - APP_ENV: testing
           - DB_CONNECTION: mysql
+          - DB_HOST: mysql
+          - DB_PORT: 5432
           - DB_DATABASE: default
           - DB_USERNAME: default
+          - DB_PASSWORD: secret
 
       - image: circleci/mysql:5.7-ram
         environment:
-          - MYSQL_ALLOW_EMPTY_PASSWORD: true
           - MYSQL_DATABASE: default
+          - MYSQL_USER: default
+          - MYSQL_PASSWORD: secret
     steps:
       - checkout
 
