--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,17 +7,13 @@ jobs:
           - APP_DEBUG: true
           - APP_ENV: testing
           - DB_CONNECTION: mysql
-          - DB_HOST: mysql
-          - DB_PORT: 5432
-          - DB_DATABASE: default
-          - DB_USERNAME: default
-          - DB_PASSWORD: secret
+          - DB_DATABASE: test_sample01
+          - DB_USERNAME: root
 
       - image: circleci/mysql:5.7-ram
         environment:
-          - MYSQL_DATABASE: default
-          - MYSQL_USER: default
-          - MYSQL_PASSWORD: secret
+          - MYSQL_ALLOW_EMPTY_PASSWORD: true
+          - MYSQL_DATABASE: test_sample01
     steps:
       - checkout
 
