--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
             - v1-dependencies-
 
       - run: composer install -n --prefer-dist
+      - run: composer -V
 
       - save_cache:
           key: v1-dependencies-{{ checksum "composer.lock" }}
